Footer and Loader corrections

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 
   </section>
   <section class="section-container background-section-four">
+		<div>
+			<p>Projeto desenvolvido para</p>
+		</div>
+		<div class="footer-logo">
+			<img src="assets/hiringcoders.png" alt="Hiring Coders Logo">
+			<img src="assets/gama.png" alt="Gama Academy Logo">
+		</div>
     <footer>
       <p>Todos os direitos reservados.</p>
     </footer>
