Product Show included

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p>Vem aí a <span  class="verde">Black Friday da Nerd Store</span>: 
 				uma sexta-feira cheia de <span  class="azul">promoções imperdíveis</span>. Os 
 				produtos mais cobiçados com os <span  class="vermelho">melhores descontos</span> e 
-				<span  class="amarelo">muitas surpresas</span> ao longo do dia. <span  class="laranja">Cadastre seu email</span> para receber as <span  class="verde">melhores promoções</span> 
+				<span  class="amarelo">muitas surpresas</span> ao longo do dia. <span  class="laranja"><a href="#form">Cadastre seu email</a></span> para receber as <span  class="verde">melhores promoções</span> 
 				e ainda <span  class="azul">cupons especiais</span> para conseguir 
 				<span  class="vermelho">preços jamais vistos</span> naqueles produtos pelos quais você tanto esperava.</p>
 		</div>
@@ -51,8 +51,44 @@
     </div>
 	</section>
 	<section class="section-container background-intersection"></section>
+
+
   <section class="section-container background-section-three">
-    
+		<div class="promotion">
+			<p>Estes e muitos outros itens raros, com preços imperdíveis...</p>
+		</div>
+		<div class="slideshow-container">
+			<div class="mySlides fade">
+				<div class="card-container">
+					<img src="assets/naruto.jpg" alt="Funko Pop Naruto Running">
+				</div>
+				<div class="text">Funko Pop Naruto Running</div>
+			</div>
+
+			<div class="mySlides fade">
+				<div class="card-container">
+					<img src="assets/kanzenban.jpg" alt="Saint Seiya Kanzenban Vol. 18">
+				</div>
+				<div class="text">Saint Seiya Kanzenban Vol. 18</div>
+			</div>
+
+			<div class="mySlides fade">
+				<div class="card-container">
+					<img src="assets/caneca-harry.jpg" alt="Caneca Harry Potter">
+				</div>
+				<div class="text">Caneca Harry Potter</div>
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+		</div>
+		<br>
+
+		<div style="text-align:center">
+			<span class="dot" onclick="currentSlide(1)"></span>
+			<span class="dot" onclick="currentSlide(2)"></span>
+			<span class="dot" onclick="currentSlide(3)"></span>
+		</div> 
 
   </section>
   <section class="section-container background-section-four">
