Corrections on Resonsive Design

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<img src="assets/gama.png" alt="Gama Academy Logo">
 		</div>
     <footer>
-      <p>Todos os direitos reservados.</p>
+      <p>Todos os direitos reservados ao desenvolvedor.</p>
     </footer>
   </section>
   
