Responsive CSS added for mobile

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 			<p>Projeto desenvolvido para</p>
 		</div>
 		<div class="footer-logo">
-			<img src="assets/hiringcoders.png" alt="Hiring Coders Logo">
-			<img src="assets/gama.png" alt="Gama Academy Logo">
+			<a href="https://www.hiringcoders.com.br/"><img src="assets/hiringcoders.png" alt="Hiring Coders Logo"></a>
+			<a href="https://www.gama.academy/"><img src="assets/gama.png" alt="Gama Academy Logo"></a>
 		</div>
     <footer>
       <p>Todos os direitos reservados ao desenvolvedor.</p>
